2008-04-15  Dan Williams  <dcbw@redhat.com>

	* src/ap-menu-item.c
	  src/applet-device-wireless.c
	  src/utils/utils.c
		- Replace IW_MODE_* with NM_802_11_MODE

2008-04-15  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
	  src/wireless-security/eap-method-leap.c
	  src/wireless-security/ws-dynamic-wep.c
	  src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-ttls.c
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/eap-method-simple.c
	  src/wireless-security/eap-method-tls.c
		- Don't require 'connection_id' as this won't have been determined when
			adding a new connection

2008-04-15  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_get_keyring_items): add option to include private passwords
			 (like the private key password and phase2 private key passwords)
			 in the returned tables for use in UI bits.  Fixes issue where the
			 802.1x security widgets couldn't get the private key password to
			 display to the user.

	* src/wireless-security/eap-method-leap.c
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/eap-method-simple.c
	  src/wireless-security/eap-method-tls.c
	  src/applet-dbus-settings.c
		- Fix up for nm_gconf_get_keyring_items() changes

2008-04-15  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4-address.c
	  src/connection-editor/page-ip4-address.h
	  src/connection-editor/ce-page-ip4-address.glade
	  src/connection-editor/Makefile.am
		- remove the source and glade files, everything IPv4 in one pane for now

	* src/connection-editor/nm-connection-editor.c
		- (nm_connection_editor_set_connection): remove usage of old ip4_address
			page
		- (connection_editor_update_connection): fill certs so that the connection