@@ -1,3 +1,9 @@
+2008-04-16  Dan Williams  <dcbw@redhat.com>
+
+	* src/utils/utils.c
+		- (utils_get_device_description): fix space addition when munging
+			device descriptions
+
 2008-04-15  Dan Williams  <dcbw@redhat.com>
 
 	* src/ap-menu-item.c
